--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: tgymnich/fork-sync@v1.8
         with:
           token: ${{ secrets.PERSONAL_TOKEN }}
-          owner: xaegreal
+          owner: lemmynsfw
           base: main
           head: main
           auto_approve: true
