--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -20,6 +20,7 @@ jobs:
           owner: lemmynsfw
           base: main
           head: main
+          ignore_fail: true
       - name: Checkout
         uses: actions/checkout@v2
         with:
