--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -6,6 +6,7 @@ on:
   workflow_dispatch: # on button click
 
 env:
+  PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
   REMOTE_ORG: LemmyNet
   REMOTE_REPO: lemmy
 
@@ -14,19 +15,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: tgymnich/fork-sync@v1.8
+      - name: Fork main branch
+        uses: tgymnich/fork-sync@v1.8
         with:
-          token: ${{ secrets.PERSONAL_TOKEN }}
-          owner: lemmynsfw
+          token: ${{ env.PERSONAL_TOKEN }}
+          owner: ${{github.repository_owner}}
           base: main
           head: main
           ignore_fail: true
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: Checkout new tags to branches
+        id: checkout-tags
+        uses: chachako/checkout-tags@v1
         with:
-          ref: main
-      - name: Fetch all tags from upstream and prune
+          base: ${{ env.REMOTE_ORG }}/${{ env.REMOTE_REPO }}
+          overwrite: true
+          # don't include alpha versions
+          filter: ".*alpha.*"
+          token: ${{ env.PERSONAL_TOKEN }}
+
+      - name: Push all new branches
         run: |
-          git remote add upstream https://github.com/${{ env.REMOTE_ORG }}/${{ env.REMOTE_REPO }}.git
-          git fetch --tags --prune --prune-tags upstream
-          git push origin --tags
+          while read branch; do
+            git push origin $branch
+          done <<< "${{ steps.checkout-tags.outputs.branches }}"
