--- a/.github/workflows/sync-tags.yml
+++ b/.github/workflows/sync-tags.yml
@@ -21,9 +21,10 @@ jobs:
       - name: Sync tags
         uses: chachako/tags-sync@v1.0.1
         with:
-          github-token: ${{ env.PERSONAL_TOKEN }}
+          # github-token: ${{ env.PERSONAL_TOKEN }}
           base-repository: ${{ env.REMOTE_ORG }}/${{ env.REMOTE_REPO }}
           head-repository: ${{ env.LOCAL_ORG }}/${{ env.LOCAL_REPO }}
+          filter-tags: "(?s)^((?!alpha).)*$"
           # apply-patch: https://github.com/${{ env.REMOTE_ORG }}/${{ env.REMOTE_REPO }}/compare/${{ env.REMOTE_BRANCH }}...${{ env.LOCAL_ORG }}:${{ env.LOCAL_REPO }}:${{ env.LOCAL_BRANCH }}.patch
           # patch-message: Apply patch from ${apply-patch}
           # patch-author: ${{ github.actor }}
