Add scripts-after-sync step to sync-tags workflow

--- a/.github/workflows/sync-tags.yml
+++ b/.github/workflows/sync-tags.yml
@@ -23,10 +23,14 @@ jobs:
         with:
           # github-token: ${{ env.PERSONAL_TOKEN }}
           base-repository: ${{ env.REMOTE_ORG }}/${{ env.REMOTE_REPO }}
-          head-repository: ${{ env.LOCAL_ORG }}/${{ env.LOCAL_REPO }}
+          # head-repository: ${{ env.LOCAL_ORG }}/${{ env.LOCAL_REPO }}
           # apply-patch: https://github.com/${{ env.REMOTE_ORG }}/${{ env.REMOTE_REPO }}/compare/${{ env.REMOTE_BRANCH }}...${{ env.LOCAL_ORG }}:${{ env.LOCAL_REPO }}:${{ env.LOCAL_BRANCH }}.patch
           # patch-message: Apply patch from ${apply-patch}
-          # patch-author: ${{ github.actor }}
-          # patch-author-email: github-actions[bot]@users.noreply.github.com
+          patch-author: ${{ github.actor }}
+          patch-author-email: github-actions[bot]@users.noreply.github.com
           # patch-committer: ${{ github.actor }}
           # patch-committer-email: github-actions[bot]@users.noreply.github.com
+          scripts-after-sync: |
+            echo "Hello World!"
+            git tag -a v1.0 -m "my version 1.0"
+            git push origin v1.0
