--- a/.github/workflows/sync-tags.yml
+++ b/.github/workflows/sync-tags.yml
@@ -27,6 +27,7 @@ jobs:
           fetch-depth: 0
           fetch-tags: true
       - run: |
+          git config --global --add safe.directory $(realpath .)
           git config user.name "xaegreal"
           git config user.email "xaeg@users.noreply.github.com"
           git remote add upstream https://github.com/${{ env.REMOTE_ORG }}/${{ env.REMOTE_REPO }}.git
