Apply NSFW patch

--- a/.github/workflows/sync-tags.yml
+++ b/.github/workflows/sync-tags.yml
@@ -30,14 +30,14 @@ jobs:
           git remote add upstream https://github.com/${{ env.REMOTE_ORG }}/${{ env.REMOTE_REPO }}.git
           git fetch --tags --prune --prune-tags upstream
           LAST_TAGS=$(git tag -l --sort=-committerdate | grep -v "lemmynsfw" | head -n 10)
-          wget -O /tmp/diff.patch https://github.com/${REMOTE_ORG}/${REMOTE_REPO}/compare/${REMOTE_BRANCH}...${LOCAL_ORG}:${LOCAL_REPO}:${LOCAL_BRANCH}.patch
+          git diff --cached upstream/${{ env.REMOTE_BRANCH }} > /tmp/diff.patch
           for tag in $LAST_TAGS; do
             if [ $(git tag -l "$tag"-lemmynsfw) ]; then
               continue
             fi
             git checkout -b $tag $tag
             git apply --reverse /tmp/diff.patch
-            git commit -m "Apply patch from ${REMOTE_ORG}/${REMOTE_REPO}#${tag}"
+            git commit -m "Apply NSFW patch"
             git tag $tag-lemmynsfw
             git push origin tag $tag-lemmynsfw
             git checkout ${{ env.LOCAL_BRANCH }}
