--- a/.github/workflows/sync-tags.yml
+++ b/.github/workflows/sync-tags.yml
@@ -30,7 +30,7 @@ jobs:
           git remote add upstream https://github.com/${{ env.REMOTE_ORG }}/${{ env.REMOTE_REPO }}.git
           git fetch --tags --prune --prune-tags upstream
           LAST_TAGS=$(git tag -l --sort=-committerdate | grep -v "lemmynsfw" | head -n 10)
-          git diff --cached upstream/${{ env.REMOTE_BRANCH }} > /tmp/diff.patch
+          git diff --cached upstream/${{ env.REMOTE_BRANCH }}..${{ env.LOCAL_BRANCH }} > /tmp/diff.patch
           for tag in $LAST_TAGS; do
             if [ $(git tag -l "$tag"-lemmynsfw) ]; then
               continue
