--- a/.github/workflows/sync-tags.yml
+++ b/.github/workflows/sync-tags.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Sync tags
         run: |
           git config --global --add safe.directory "$GITHUB_WORKSPACE"
-          git config user.name ${{ github.actor }}
-          git config user.email "${{ github.actor }}@users.noreply.github.com"
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git remote add upstream https://github.com/${{ env.REMOTE_ORG }}/${{ env.REMOTE_REPO }}.git
           git fetch --tags --prune --prune-tags upstream
           LAST_TAGS=$(git tag -l --sort=-committerdate | grep -v ${{ env.POSTFIX }} | head -n 10)
