--- a/.github/workflows/deploy-docker-image.yml
+++ b/.github/workflows/deploy-docker-image.yml
@@ -41,3 +41,6 @@ jobs:
           context: .
           push: true
           tags: ghcr.io/${{ env.LOCAL_ORG }}/${{ env.LOCAL_REPO }}:${{ github.ref_name }}
+          file: docker/Dockerfile
+          build-args: |
+            RUST_RELEASE_MODE=release
