--- a/.github/workflows/sync-tags.yml
+++ b/.github/workflows/sync-tags.yml
@@ -40,7 +40,7 @@ jobs:
             git checkout -b $tag $tag
             git apply /tmp/diff.patch
             git add .
-            git commit -m "Apply NSFW patch"
+            git commit -m "Auto apply NSFW patch to $tag"
             git tag $tag-${{ env.POSTFIX }}
             git push origin tag $tag-${{ env.POSTFIX }}
             git checkout ${{ env.LOCAL_BRANCH }}
