--- a/.github/workflows/deploy-docker-image.yml
+++ b/.github/workflows/deploy-docker-image.yml
@@ -27,10 +27,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
-      - name: Docker meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/${{ env.LOCAL_ORG }}/${{ env.LOCAL_REPO }}:${{ github.ref_name }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
@@ -46,8 +42,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.docker_meta.outputs.tags }}
-          labels: ${{ steps.docker_meta.outputs.labels }}
+          tags: ghcr.io/${{ env.LOCAL_ORG }}/${{ env.LOCAL_REPO }}:${{ github.ref_name }}
           file: docker/Dockerfile
           build-args: |
             RUST_RELEASE_MODE=release
