--- a/.github/workflows/sync-tags.yml
+++ b/.github/workflows/sync-tags.yml
@@ -31,7 +31,7 @@ jobs:
           git config user.email ${{ github.actor }}@users.noreply.github.com
           git remote add upstream https://github.com/${{ env.REMOTE_ORG }}/${{ env.REMOTE_REPO }}.git
           git fetch --tags --prune upstream
-          LAST_TAGS=$(git tag -l --sort=-committerdate | grep -v ${{ env.POSTFIX }} | head -n 10)
+          LAST_TAGS=$(git tag -l --sort=-committerdate | grep -v --max-count 10 ${{ env.POSTFIX }})
           git diff --cached --full-index upstream/${{ env.REMOTE_BRANCH }} > /tmp/diff.patch
           for tag in $LAST_TAGS; do
             if [ $(git tag -l $tag-${{ env.POSTFIX }}) ]; then
