--- a/.github/workflows/sync-tags.yml
+++ b/.github/workflows/sync-tags.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           fetch-depth: 0
           fetch-tags: true
+          token: ${{ env.PERSONAL_TOKEN }}
       - name: Sync tags
         run: |
           git config --global --add safe.directory "$GITHUB_WORKSPACE"
