--- a/.github/workflows/deploy-docker-image.yml
+++ b/.github/workflows/deploy-docker-image.yml
@@ -35,5 +35,6 @@ jobs:
           push: true
           tags: ghcr.io/${{ env.LOCAL_ORG }}/${{ env.LOCAL_REPO }}:${{ github.ref_name }}
           file: docker/Dockerfile
+          platforms: linux/amd64,linux/arm64
           build-args: |
             RUST_RELEASE_MODE=release
